--- a/ray-core/solutions/Solutions.ipynb
+++ b/ray-core/solutions/Solutions.ipynb
@@ -50,19 +50,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-04-14 07:19:40,828\tINFO resource_spec.py:212 -- Starting Ray with 4.35 GiB memory available for workers and up to 2.2 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
-      "2020-04-14 07:19:41,181\tINFO services.py:1148 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8265\u001b[39m\u001b[22m\n"
+      "2020-04-15 09:27:21,679\tINFO resource_spec.py:212 -- Starting Ray with 4.54 GiB memory available for workers and up to 2.29 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
+      "2020-04-15 09:27:22,021\tINFO services.py:1148 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8265\u001b[39m\u001b[22m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'node_ip_address': '192.168.1.149',\n",
-       " 'redis_address': '192.168.1.149:33125',\n",
-       " 'object_store_address': '/tmp/ray/session_2020-04-14_07-19-40_819186_79092/sockets/plasma_store',\n",
-       " 'raylet_socket_name': '/tmp/ray/session_2020-04-14_07-19-40_819186_79092/sockets/raylet',\n",
+       " 'redis_address': '192.168.1.149:11486',\n",
+       " 'object_store_address': '/tmp/ray/session_2020-04-15_09-27-21_670092_4807/sockets/plasma_store',\n",
+       " 'raylet_socket_name': '/tmp/ray/session_2020-04-15_09-27-21_670092_4807/sockets/raylet',\n",
        " 'webui_url': 'localhost:8265',\n",
-       " 'session_dir': '/tmp/ray/session_2020-04-14_07-19-40_819186_79092'}"
+       " 'session_dir': '/tmp/ray/session_2020-04-15_09-27-21_670092_4807'}"
       ]
      },
      "execution_count": 3,
@@ -87,21 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ray' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-20f42c1817db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m@\u001b[0m\u001b[0mray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremote\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mslow_square\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ray' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@ray.remote\n",
     "def slow_square(n):\n",
@@ -167,47 +155,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Returned   2 completed tasks. (elapsed time:  2.017)\n",
+      "Returned   2 completed tasks. (elapsed time:  2.018)\n",
       "0: []\n",
-      "10: [-0.44553469 -1.93479913 -3.5977004   1.9238182   4.39475763 -2.29234861\n",
-      "  0.15558072 -0.9253621  -0.76277374  2.75928495]\n",
-      "Returned   1 completed tasks. (elapsed time:  5.532)\n",
-      "20: [-1.34267102 -2.06120681  0.05251457  0.67592777  0.64237916 -1.77380716\n",
-      " -0.17278449  1.8836336   1.03791764  2.07584008  0.41470915 -0.31120551\n",
-      " -0.48290277  2.03349318 -3.58036838  2.7793085   2.22316961  3.2815568\n",
-      " -3.00447352 -1.39071692]\n",
-      "Returned   2 completed tasks. (elapsed time:  8.024)\n",
-      "30: [ 0.50489809 -1.26025978  1.90875912 -1.47413317  3.56160123 -0.02548098\n",
-      "  1.82681312  1.22907694 -0.93719539 -4.25904422  1.84724104  1.67586983\n",
-      "  2.79733789 -1.77137426 -0.34103046  0.56282364  0.48166511  5.00366035\n",
-      " -0.07997564 -2.71198896 -1.989703    0.97500589  1.70713808 -0.84229131\n",
-      "  1.13273471 -0.80687159  2.57089412  5.7337013   2.40813672  0.89270571]\n",
-      "40: [ 1.31413776  1.07380793  0.19614594  2.76340287  6.17523772 -1.0867485\n",
-      "  1.63531305 -0.40246241  0.415732   -3.75751384 -0.14257859 -2.38093862\n",
-      "  2.96220458  1.01726657 -1.61874168 -0.29634555  0.39936675 -0.06591845\n",
-      "  2.0031551   3.96643664  1.27539779  1.30864908 -3.41159412  0.70417935\n",
-      " -2.38319783 -3.72173603 -0.74922992 -0.42531303 -1.24237499 -1.89849136\n",
-      " -2.16404888 -1.95076554  1.55067811  1.06891855  1.72966587  0.46117471\n",
-      "  1.8579058   0.91857398  2.11024559 -0.26900084]\n",
+      "10: [ 1.86775352  2.9454727  -5.04052366 -4.33534297  1.6263961   0.39691723\n",
+      " -1.25821447 -0.29963352 -2.3948451   3.30066021]\n",
+      "Returned   1 completed tasks. (elapsed time:  5.537)\n",
+      "20: [ 1.47778499  2.54213133 -0.78084779  0.46153321  0.60669328 -1.42004875\n",
+      "  0.25173278  0.83958007 -3.21123112 -3.46694075  0.24307297 -0.62017288\n",
+      " -0.71827436  0.80699748 -0.17335598 -1.11008536  2.80218211 -2.01117915\n",
+      " -3.20214683 -2.39029264]\n",
+      "Returned   2 completed tasks. (elapsed time:  8.016)\n",
+      "30: [ 0.79918898  1.41123412  0.80206555  1.57553845 -1.22381679 -0.01631308\n",
+      "  0.09983679  1.4726712   3.00156156 -0.9257089   2.37555648  1.77130338\n",
+      " -1.67851542  0.80422592 -3.30197833 -0.09043308  1.55741247 -0.09579186\n",
+      "  5.74481545 -2.21937375  0.10755704 -0.20810047 -4.62367772 -5.12056826\n",
+      "  1.30345284  1.27297868  3.98460268  1.82273513  3.09241094  0.37172731]\n",
+      "40: [-1.31749739 -0.48467903  3.29539476  1.52684404 -3.04442408 -0.77205294\n",
+      "  3.61668242  5.17561164  4.54586479  3.86634932  1.2627146  -1.55678784\n",
+      "  0.51676254  1.8860181   3.13712241  1.10584059  2.59475056 -2.48426622\n",
+      "  0.19116759 -1.41014135  0.81281711 -1.63363802  0.12685201  0.43679531\n",
+      "  0.78767328 -3.575837    4.08589969 -0.72037563 -4.16355902  0.59522002\n",
+      "  3.16122492 -1.61853418  1.5672012  -0.1227901  -0.48364664 -0.78241022\n",
+      " -1.58180544 -1.74994503 -0.76809718 -2.53970429]\n",
       "\n",
-      "all arrays: [array([], dtype=float64), array([-0.44553469, -1.93479913, -3.5977004 ,  1.9238182 ,  4.39475763,\n",
-      "       -2.29234861,  0.15558072, -0.9253621 , -0.76277374,  2.75928495]), array([-1.34267102, -2.06120681,  0.05251457,  0.67592777,  0.64237916,\n",
-      "       -1.77380716, -0.17278449,  1.8836336 ,  1.03791764,  2.07584008,\n",
-      "        0.41470915, -0.31120551, -0.48290277,  2.03349318, -3.58036838,\n",
-      "        2.7793085 ,  2.22316961,  3.2815568 , -3.00447352, -1.39071692]), array([ 0.50489809, -1.26025978,  1.90875912, -1.47413317,  3.56160123,\n",
-      "       -0.02548098,  1.82681312,  1.22907694, -0.93719539, -4.25904422,\n",
-      "        1.84724104,  1.67586983,  2.79733789, -1.77137426, -0.34103046,\n",
-      "        0.56282364,  0.48166511,  5.00366035, -0.07997564, -2.71198896,\n",
-      "       -1.989703  ,  0.97500589,  1.70713808, -0.84229131,  1.13273471,\n",
-      "       -0.80687159,  2.57089412,  5.7337013 ,  2.40813672,  0.89270571]), array([ 1.31413776,  1.07380793,  0.19614594,  2.76340287,  6.17523772,\n",
-      "       -1.0867485 ,  1.63531305, -0.40246241,  0.415732  , -3.75751384,\n",
-      "       -0.14257859, -2.38093862,  2.96220458,  1.01726657, -1.61874168,\n",
-      "       -0.29634555,  0.39936675, -0.06591845,  2.0031551 ,  3.96643664,\n",
-      "        1.27539779,  1.30864908, -3.41159412,  0.70417935, -2.38319783,\n",
-      "       -3.72173603, -0.74922992, -0.42531303, -1.24237499, -1.89849136,\n",
-      "       -2.16404888, -1.95076554,  1.55067811,  1.06891855,  1.72966587,\n",
-      "        0.46117471,  1.8579058 ,  0.91857398,  2.11024559, -0.26900084])]\n",
-      "Total time: duration:  8.026 seconds\n"
+      "all arrays: [array([], dtype=float64), array([ 1.86775352,  2.9454727 , -5.04052366, -4.33534297,  1.6263961 ,\n",
+      "        0.39691723, -1.25821447, -0.29963352, -2.3948451 ,  3.30066021]), array([ 1.47778499,  2.54213133, -0.78084779,  0.46153321,  0.60669328,\n",
+      "       -1.42004875,  0.25173278,  0.83958007, -3.21123112, -3.46694075,\n",
+      "        0.24307297, -0.62017288, -0.71827436,  0.80699748, -0.17335598,\n",
+      "       -1.11008536,  2.80218211, -2.01117915, -3.20214683, -2.39029264]), array([ 0.79918898,  1.41123412,  0.80206555,  1.57553845, -1.22381679,\n",
+      "       -0.01631308,  0.09983679,  1.4726712 ,  3.00156156, -0.9257089 ,\n",
+      "        2.37555648,  1.77130338, -1.67851542,  0.80422592, -3.30197833,\n",
+      "       -0.09043308,  1.55741247, -0.09579186,  5.74481545, -2.21937375,\n",
+      "        0.10755704, -0.20810047, -4.62367772, -5.12056826,  1.30345284,\n",
+      "        1.27297868,  3.98460268,  1.82273513,  3.09241094,  0.37172731]), array([-1.31749739, -0.48467903,  3.29539476,  1.52684404, -3.04442408,\n",
+      "       -0.77205294,  3.61668242,  5.17561164,  4.54586479,  3.86634932,\n",
+      "        1.2627146 , -1.55678784,  0.51676254,  1.8860181 ,  3.13712241,\n",
+      "        1.10584059,  2.59475056, -2.48426622,  0.19116759, -1.41014135,\n",
+      "        0.81281711, -1.63363802,  0.12685201,  0.43679531,  0.78767328,\n",
+      "       -3.575837  ,  4.08589969, -0.72037563, -4.16355902,  0.59522002,\n",
+      "        3.16122492, -1.61853418,  1.5672012 , -0.1227901 , -0.48364664,\n",
+      "       -0.78241022, -1.58180544, -1.74994503, -0.76809718, -2.53970429])]\n",
+      "Total time: duration:  8.022 seconds\n"
      ]
     }
    ],
@@ -290,9 +278,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 4 in 04-DistributedStateWithActors\n",
+    "## Exercise 4 - \"Homework\" - in 04-DistributedStateWithActors\n",
     "\n",
-    "Let's see if we can achieve better performance results than our last run. For your convenience, here are new versions of `RayGame` (called `RayGame2`) and `ConwaysRules` (called `RayConwaysRules`), both declared as actors. What about `State`? It actually _doesn't_ make sense to make it an actor, because it is really just an _immutable_ holder of data, so making it an actor is not going to bring any benefit."
+    "Since profiling shows that `live_neighbors` is the bottleneck, what could be done to reduce its execution time? The solution shown here reduces its overhead by about 40%. Not bad. \n",
+    "\n",
+    "The solution also implements parallel invocations grid updates, rather doing the whole grid in sequential steps.\n",
+    "\n",
+    "As discussed in lesson 4, these kinds of optimizations make sense when you _really_ have a compelling reason to squeeze optimal performance out of the code. Hence, this optimization exercise will mostly appeal to those of you with such requirements or who low-level performance optimizations like this. \n",
+    "\n",
+    "Note that the `util` directory has standalone Python scripts you can play with, such as `util/micro-perf-tests.py`, which tests three variants of _live_neighbors_, including the original version. Also, `util/Ex4-GameOfLife.py` is the program used to develop the solution show here.\n",
+    "\n",
+    "If you tried the \"easier experiments\" suggested, such as enhancing `RayConwaysRules.step()` to accept a `num_steps` argument, you probably found that they didn't improve performance. As for the non-Ray game, this change only moves processing around but doesn't parallelize it more than before, so performance is about the same."
    ]
   },
   {
@@ -437,14 +433,16 @@
     "\n",
     "    def live_neighbors(self, i, j, state):\n",
     "        \"\"\"\n",
+    "        This is the faster implementation than the original one.\n",
     "        Wrap at boundaries (i.e., treat the grid as a 2-dim \"toroid\")\n",
-    "        To wrap at boundaries, when k-1=-1, that wraps itself;\n",
-    "        for k+1=state.size, we mod it (which works for -1, too)\n",
-    "        For simplicity, we count the cell itself, then subtact it\n",
     "        \"\"\"\n",
     "        s = state.size\n",
     "        g = state.grid\n",
-    "        return sum([g[i2%s][j2%s] for i2 in [i-1,i,i+1] for j2 in [j-1,j,j+1]]) - g[i][j]"
+    "        im1 = i-1 if i > 0   else s-1\n",
+    "        ip1 = i+1 if i < s-1 else 0\n",
+    "        jm1 = j-1 if j > 0   else s-1\n",
+    "        jp1 = j+1 if j < s-1 else 0\n",
+    "        return g[im1][jm1] + g[im1][j] + g[im1][jp1] + g[i][jm1] + g[i][jp1] + g[ip1][jm1] + g[ip1][j] + g[ip1][jp1]"
    ]
   },
   {
@@ -495,8 +493,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total time for 1 games (max_steps = 200, batch_size = 1) duration: 11.669 seconds\n",
-      "Total time for 1 games (max_steps = 200, batch_size = 50) duration: 11.923 seconds\n"
+      "Total time for 1 games (max_steps = 200, batch_size = 1) duration:  7.174 seconds\n",
+      "Total time for 1 games (max_steps = 200, batch_size = 50) duration:  6.871 seconds\n"
      ]
     }
    ],
@@ -519,72 +517,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sanity check; does the order of the nested looping in `time_ray_games2` make a difference? Let's see..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def time_ray_games3(num_games = 10, max_steps = max_steps, batch_size = 1, grid_size = grid_size):\n",
-    "    game_ids = [RayGame2.remote(State(size = grid_size), RayConwaysRules.remote()) for i in range(num_games)]\n",
-    "    start = time.time()\n",
-    "    state_ids = []\n",
-    "    for i in range(int(max_steps/batch_size)):  # Do a total of max_steps game steps, which is max_steps/delta_steps\n",
-    "        for game_id in game_ids:\n",
-    "            state_ids.append(game_id.step.remote(batch_size))\n",
-    "    ray.get(state_ids)  # wait for everything to finish! We are ignoring what ray.get() returns, but what will it be??\n",
-    "    pd(time.time() - start, prefix = f'Total time for {num_games} games (max_steps = {max_steps}, batch_size = {batch_size})')\n",
-    "    return game_ids  # for cleanup afterwards"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total time for 1 games (max_steps = 200, batch_size = 1) duration: 11.158 seconds\n",
-      "Total time for 1 games (max_steps = 200, batch_size = 50) duration: 10.963 seconds\n"
-     ]
-    }
-   ],
-   "source": [
-    "ids1 = time_ray_games3(num_games = 1, max_steps = max_steps, batch_size=1, grid_size=grid_size)\n",
-    "ids2 = time_ray_games3(num_games = 1, max_steps = max_steps, batch_size=50, grid_size=grid_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cleanup(ids1)\n",
-    "cleanup(ids2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "No, it doesn't matter."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So, this didn't help. In both runs, one core was pegged, as discussed in the lesson; we are bottlenecked in `RayConwaysRules.step()`. Now let's try parallizing that. \n",
+    "The new implementation of `live_neighbors` has a noticable benefit, but batching doesn't make a large different.\n",
     "\n",
-    "We saw already that must compute the evolution of the game serially, because each state depends on the previous state, so we can't parallelize that. However, each _cell_ only depends on its eight neighbors and we have a grid of cells. So, we can break up the grid into smaller grids and compute their changes in parallel.\n",
+    "In this same `solutions` directory, you'll find standalone Python scripts used to explore optimizations. All have a `--help` option that describes command-line options, e.g., `python micro-perf-tests.py --help`.\n",
     "\n",
-    "This is a nontrivial refactoring. This notebook will update in GitHub soon with the solution. "
+    "* The new `live_neighbors` implementation was tested separately using the standalone python script `micro-perf-tests.py`.\n",
+    "* The updated Game of Life implementation above was explored in `Ex4-GameOfLife.py`.\n",
+    "* A more aggressive refactoring that processes the grid updates in async (parallel) blocks is `Ex4-GameOfLife-blocks.py`. The comments at the top of this file compare how will it performs vs. `Ex4-GameOfLife.py`. As written, it only improves performance about 3%.\n",
+    "\n",
+    "Therefore, the big win is optimizing `live_neighbors`."
    ]
   }
  ],
